[gd_scene load_steps=23 format=3 uid="uid://c4d2t4cj84c11"]

[ext_resource type="FontFile" uid="uid://dlb3dglxf7aok" path="res://asset/font/Cubic.ttf" id="1_ajwsw"]
[ext_resource type="Script" path="res://src/furniture/DoorCtrlUi.gd" id="1_cmtxs"]
[ext_resource type="Script" path="res://src/furniture/DoorCtrlUiLineEdit.gd" id="2_oajge"]
[ext_resource type="Texture2D" uid="uid://dodw4xb6wpbdr" path="res://asset/ui/Ancient/grey.png" id="2_pnfhw"]
[ext_resource type="AudioStream" uid="uid://dt772k3pi6a5k" path="res://asset/sound/effect/button_down.wav" id="3_d5r50"]
[ext_resource type="Texture2D" uid="uid://djmn74lv8dbqy" path="res://asset/ui/Outline/blue_pressed.png" id="4_6xqd3"]
[ext_resource type="Texture2D" uid="uid://5ajdivmuskcr" path="res://asset/ui/Colored/red.png" id="5_458bk"]
[ext_resource type="StyleBox" uid="uid://dgnwx3klhxhnt" path="res://tres/ui/door_ctrl_ui_button_normal.tres" id="5_w18ve"]
[ext_resource type="Texture2D" uid="uid://v05evjcp8dxw" path="res://asset/ui/Colored/green.png" id="5_y0tve"]
[ext_resource type="StyleBox" uid="uid://dj5xlfmlsouxr" path="res://tres/ui/door_ctrl_ui_button_pressed.tres" id="6_0kers"]
[ext_resource type="Texture2D" uid="uid://d38yfyx5xq3ub" path="res://asset/ui/Colored/green_pressed.png" id="6_cb0bn"]
[ext_resource type="Texture2D" uid="uid://dmwnjlq7lto5r" path="res://asset/ui/Colored/red_pressed.png" id="6_o8pq0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7l1os"]
texture = ExtResource("2_pnfhw")
region_rect = Rect2(0, 0, 48, 48)
modulate_color = Color(0.309804, 0.309804, 0.309804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gmobj"]
texture = ExtResource("4_6xqd3")
margin_left = 3.0
margin_right = 3.0
region_rect = Rect2(0, 0, 48, 48)
modulate_color = Color(0, 0.937255, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2ix0"]
texture = ExtResource("5_458bk")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vymwp"]
texture = ExtResource("5_458bk")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wev1d"]
texture = ExtResource("6_o8pq0")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pmq5p"]
texture = ExtResource("5_y0tve")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c7rdp"]
texture = ExtResource("5_y0tve")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3yged"]
texture = ExtResource("6_cb0bn")
margin_left = 4.0
margin_right = 4.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="Animation" id="Animation_krmx4"]
resource_name = "default"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-262, 275), Vector2(623.5, 266)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uolf6"]
_data = {
"default": SubResource("Animation_krmx4")
}

[node name="DoorCtrlUi" type="CanvasLayer"]
script = ExtResource("1_cmtxs")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -982.0
offset_top = -151.0
offset_right = -789.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_7l1os")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -129.5
offset_right = 83.5
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
offset_right = 167.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 30
theme_override_styles/read_only = SubResource("StyleBoxTexture_gmobj")
placeholder_text = "输入密码"
editable = false
secret = true
secret_character = "x"
virtual_keyboard_type = 2
shortcut_keys_enabled = false
selecting_enabled = false
script = ExtResource("2_oajge")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/LineEdit"]
stream = ExtResource("3_d5r50")

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
offset_top = 47.0
offset_right = 167.0
offset_bottom = 181.0
columns = 3

[node name="Button1" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_right = 53.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 1 "

[node name="Button2" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 57.0
offset_right = 110.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 2 "

[node name="Button3" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 114.0
offset_right = 167.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 3 "

[node name="Button4" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_top = 46.0
offset_right = 53.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 4 "

[node name="Button5" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 57.0
offset_top = 46.0
offset_right = 110.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 5 "

[node name="Button6" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 114.0
offset_top = 46.0
offset_right = 167.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 6 "

[node name="Button7" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_top = 92.0
offset_right = 53.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 7 "

[node name="Button8" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 57.0
offset_top = 92.0
offset_right = 110.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 8 "

[node name="Button9" type="Button" parent="Panel/VBoxContainer/GridContainer"]
offset_left = 114.0
offset_top = 92.0
offset_right = 167.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 9 "

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
offset_top = 185.0
offset_right = 167.0
offset_bottom = 227.0
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="ButtonDelete" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
offset_right = 53.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxTexture_t2ix0")
theme_override_styles/hover = SubResource("StyleBoxTexture_vymwp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wev1d")
text = "<-"

[node name="ButtonZero" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
offset_left = 57.0
offset_right = 110.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("5_w18ve")
theme_override_styles/hover = ExtResource("5_w18ve")
theme_override_styles/pressed = ExtResource("6_0kers")
text = " 0 "

[node name="ButtonOK" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
offset_left = 114.0
offset_right = 167.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("1_ajwsw")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxTexture_pmq5p")
theme_override_styles/hover = SubResource("StyleBoxTexture_c7rdp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3yged")
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uolf6")
}

[connection signal="door_ctrl_ok_button_pressed" from="Panel/VBoxContainer/LineEdit" to="." method="_on_line_edit_door_ctrl_ok_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button1" to="Panel/VBoxContainer/LineEdit" method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button2" to="Panel/VBoxContainer/LineEdit" method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button3" to="Panel/VBoxContainer/LineEdit" method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button4" to="Panel/VBoxContainer/LineEdit" method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button5" to="Panel/VBoxContainer/LineEdit" method="_on_button_5_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button6" to="Panel/VBoxContainer/LineEdit" method="_on_button_6_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button7" to="Panel/VBoxContainer/LineEdit" method="_on_button_7_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button8" to="Panel/VBoxContainer/LineEdit" method="_on_button_8_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Button9" to="Panel/VBoxContainer/LineEdit" method="_on_button_9_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ButtonDelete" to="Panel/VBoxContainer/LineEdit" method="_on_button_delete_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ButtonZero" to="Panel/VBoxContainer/LineEdit" method="_on_button_zero_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ButtonOK" to="Panel/VBoxContainer/LineEdit" method="_on_button_ok_pressed"]
